Added Bootstrap and customizations

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,6 @@
-<h1>What up cuh</h1>
-<p>This is the begining of something big</p>
-<p>Sign up <%= link_to "here", "#" %>.</p>
+
+<div class="jumbotron">
+	<h1>What up cuh</h1>
+	<h2>This is the begining of something big</h2>
+	<p>Click here to <%= link_to "sign up", "#", class: "btn btn-primary btn-lg" %>.</p>
+</div>
