boom page and other customizations

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
-
-<div class="jumbotron">
-	<h1>What up cuh</h1>
-	<h2>This is the begining of something big</h2>
-	<p>Click here to <%= link_to "sign up", "#", class: "btn btn-primary btn-lg" %>.</p>
+<div class="jumbotron center">
+<h1>What up cuh</h1>
+<h2>This is the begining of something big</h2>
+<p><%= link_to "Log in", "#", class: "btn btn-default btn-lg" %>
+       <%= link_to "Sign up", "#", class: "btn btn-primary btn-lg" %></p>
 </div>
