--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,9 +1,22 @@
-$body-bg:     #2ecc71;
-$navbar-inverse-bg:		#27ae60;
+@import url(http://fonts.googleapis.com/css?family=Lato:400,700);
+
+$body-bg:		#ecf0f1;
+$font-family-sans-serif:                'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$navbar-height:                                        45px;
+$navbar-inverse-bg:		#c0392b;
 $navbar-inverse-link-color:		white;
-$jumbotron-bg:		#27ae60;
-$jumbotron-heading-color:		white;
-$text-color:		white;
-$brand-primary:		#2ecc71;
+$jumbotron-padding:		145px;
+$jumbotron-bg:		white;
+$jumbotron-heading-color:		black;
+$text-color:		black;
+$brand-primary:		#c0392b;
 
 @import 'bootstrap';
+
+.center {
+     text-align: center;
+}
+
+.navbar-brand {
+     font-weight: bold;
+}
