--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,75 @@
-<div class="jumbotron center">
-<h1>What up cuh</h1>
-<h2>This is the begining of something big</h2>
-<p><%= link_to "Log in", "#", class: "btn btn-default btn-lg" %>
-       <%= link_to "Sign up", "#", class: "btn btn-primary btn-lg" %></p>
+
+<% if user_signed_in? %>
+	
+		<!--  Carousel - consult the Twitter Bootstrap docs at 
+      http://twitter.github.com/bootstrap/javascript.html#carousel -->
+<div id="homepage-carousel" class="carousel slide" data-ride="carousel"><!-- class of slide for animation -->
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#homepage-carousel" data-slide-to="0" class="active"></li>
+    <li data-target="#homepage-carousel" data-slide-to="1"></li>
+    <li data-target="#homepage-carousel" data-slide-to="2"></li>
+    <li data-target="#homepage-carousel" data-slide-to="3"></li>
+    <li data-target="#homepage-carousel" data-slide-to="4"></li>
+  </ol> 
+  <!-- Wrapper for slides -->	
+  <div class="carousel-inner">
+    <div class="item active"><!-- class of active since it's the first item -->
+      <img src="http://placehold.it/1200x480" alt="" />
+      <div class="carousel-caption">
+        <p>How about a rematch?</p>
+      </div>
+    </div>
+    <div class="item">
+      <img src="http://placehold.it/1200x480" alt="" />
+      <div class="carousel-caption">
+        <p>Caption text here</p>
+      </div>
+    </div>
+    <div class="item">
+      <img src="http://placehold.it/1200x480" alt="" />
+      <div class="carousel-caption">
+        <p>Caption text here</p>
+      </div>
+    </div>
+    <div class="item">
+      <img src="http://placehold.it/1200x480" alt="" />
+      <div class="carousel-caption">
+        <p>Caption text here</p>
+      </div>
+    </div>
+  	<div class="item">
+      <img src="http://placehold.it/1200x480" alt="" />
+      <div class="carousel-caption">
+        <p>Caption text here</p>
+      </div>
+    </div>
+  </div><!-- /.carousel-inner -->
+
+  <!--  Next and Previous controls below
+        href values must reference the id for this carousel -->
+    <a class="carousel-control left" href="#homepage-carousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+    <a class="carousel-control right" href="#homepage-carousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>
+
+<script>
+      $(document).ready(function(){
+        $('.carousel').carousel({
+          interval: 3500
+        });  
+      });
+    </script>
+	
+<% else %>	
+		<p>
+	<div class="jumbotron center">
+		<h1>What up cuh</h1>
+		<h2>This is the begining of something big</h2>
+			<%= link_to "Log in", new_user_session_path, class: "btn btn-default btn-lg" %>
+    		<%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
+		</p>
+	<% end %>	
+
 </div>
